Custom--app/main/default/objects/Tenant_Card__c/Tenant_Card__c.object-meta.xml
<CustomObject>
    <description>This will be used at a future date to track lease details imported from Yardi.  FOR DATA LOADS, USE EITHER HMYREF OR CASESAFEID.</description>
    <label>Lease</label>
    <nameField>
        <displayFormat>LEASE{00000}</displayFormat>
        <label>Lease Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>