Custom--app/main/default/objects/Tenant_Card__c/fields/Admin_Fee__c.field-meta.xml
<CustomField>
    <fullName>Admin_Fee__c</fullName>
    <description>Administrative fee applied to Arizona Properties only.</description>
    <inlineHelpText>Administrative fee applied to Arizona Properties only.</inlineHelpText>
    <label>Admin Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>