Custom--app/main/default/objects/Tenant_Card__c/fields/Application_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Date__c</fullName>
    <description>Date the Tenant submitted the application to IH.</description>
    <inlineHelpText>Date the Tenant submitted the application to IH.</inlineHelpText>
    <label>Application Date</label>
    <type>Date</type>
</CustomField>