Custom--app/main/default/objects/Tenant_Card__c/fields/AppTrack_Owner__c.field-meta.xml
<CustomField>
    <fullName>AppTrack_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AppTrack Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AppTrackOwner</relationshipName>
    <type>Lookup</type>
</CustomField>