Custom--app/main/default/objects/Tenant_Card__c/fields/Bad_Data__c.field-meta.xml
<CustomField>
    <fullName>Bad_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bad Data</label>
    <type>Checkbox</type>
</CustomField>