Custom--app/main/default/objects/Tenant_Card__c/fields/Data_Load_Status__c.field-meta.xml
<CustomField>
    <fullName>Data_Load_Status__c</fullName>
    <label>Data Load: Status</label>
    <length>155</length>
    <type>Text</type>
</CustomField>