Custom--app/main/default/objects/Tenant_Card__c/fields/Data_Validation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Data_Validation_Notes__c</fullName>
    <inlineHelpText>Not visible to regular users.</inlineHelpText>
    <label>Data Validation Notes</label>
    <length>155</length>
    <type>Text</type>
</CustomField>