Custom--app/main/default/objects/Tenant_Card__c/fields/Days_to_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Expiration__c</fullName>
    <formula>IF(Month_to_Month__c  = TRUE , Lease_End_Date__c - TODAY(), 
IF(Lease_End_Date__c &lt; TODAY(),0, Lease_End_Date__c - TODAY()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Expiration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>