Custom--app/main/default/objects/Tenant_Card__c/fields/Days_to_Move_Out__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Move_Out__c</fullName>
    <formula>Move_Out_Date__c  -  TODAY()</formula>
    <inlineHelpText>Move-Out Date minus TODAY.</inlineHelpText>
    <label>Days to Move Out</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>