Custom--app/main/default/objects/Tenant_Card__c/fields/First_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Last_Name__c</fullName>
    <description>Resident's First and Last Name</description>
    <inlineHelpText>Resident's First and Last Name</inlineHelpText>
    <label>First &amp; Last Name</label>
    <length>45</length>
    <type>Text</type>
</CustomField>