Custom--app/main/default/objects/Tenant_Card__c/fields/HMYref__c.field-meta.xml
<CustomField>
    <fullName>HMYref__c</fullName>
    <description>Reference field from the Yardi spreadsheet load</description>
    <externalId>true</externalId>
    <label>HMYref</label>
    <length>155</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>