Custom--app/main/default/objects/Tenant_Card__c/fields/Housing_Rent__c.field-meta.xml
<CustomField>
    <fullName>Housing_Rent__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>Amount paid by the Public Housing Authority</description>
    <inlineHelpText>Amount paid by the Public Housing Authority</inlineHelpText>
    <label>Housing Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>