Custom--app/main/default/objects/Tenant_Card__c/fields/Import_Date__c.field-meta.xml
<CustomField>
    <fullName>Import_Date__c</fullName>
    <label>Import Date</label>
    <type>Date</type>
</CustomField>