Custom--app/main/default/objects/Tenant_Card__c/fields/Lease_End_Date_Change__c.field-meta.xml
<CustomField>
    <fullName>Lease_End_Date_Change__c</fullName>
    <label>Lease End Date Change</label>
    <type>Date</type>
</CustomField>