Custom--app/main/default/objects/Tenant_Card__c/fields/Lease_End_Date_Prior_Value__c.field-meta.xml
<CustomField>
    <fullName>Lease_End_Date_Prior_Value__c</fullName>
    <label>Lease End Date Prior Value</label>
    <type>Date</type>
</CustomField>