Custom--app/main/default/objects/Tenant_Card__c/fields/Lease_From_Date__c.field-meta.xml
<CustomField>
    <fullName>Lease_From_Date__c</fullName>
    <label>Lease From Date</label>
    <type>Date</type>
</CustomField>