Custom--app/main/default/objects/Tenant_Card__c/fields/Lease_Rent__c.field-meta.xml
<CustomField>
    <fullName>Lease_Rent__c</fullName>
    <description>Amount Resident is supposed to pay for Rent from Lease document</description>
    <inlineHelpText>Amount Resident is supposed to pay for Rent from Lease document</inlineHelpText>
    <label>Lease Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>