Custom--app/main/default/objects/Tenant_Card__c/fields/Lease_Status__c.field-meta.xml
<CustomField>
    <fullName>Lease_Status__c</fullName>
    <label>Ten/TIP Lease Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IH Initial Lease</fullName>
            </value>
            <value>
                <fullName>IH Initial Lease Renewal</fullName>
            </value>
            <value>
                <fullName>IH Renewal</fullName>
            </value>
            <value>
                <fullName>TIP Eviction</fullName>
            </value>
            <value>
                <fullName>TIP New Lease</fullName>
            </value>
            <value>
                <fullName>TIP Prior Owner Lease Honored</fullName>
            </value>
            <value>
                <fullName>TIP Renewal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>