Custom--app/main/default/objects/Tenant_Card__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <label>Market</label>
    <length>155</length>
    <type>Text</type>
</CustomField>