Custom--app/main/default/objects/Tenant_Card__c/fields/Memos_Comments__c.field-meta.xml
<CustomField>
    <fullName>Memos_Comments__c</fullName>
    <label>Memos/Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>