Custom--app/main/default/objects/Tenant_Card__c/fields/Month_to_Month__c.field-meta.xml
<CustomField>
    <fullName>Month_to_Month__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Month to Month</label>
    <type>Checkbox</type>
</CustomField>