Custom--app/main/default/objects/Tenant_Card__c/fields/Move_Out_Reason_Yardi__c.field-meta.xml
<CustomField>
    <fullName>Move_Out_Reason_Yardi__c</fullName>
    <label>Move-Out Reason (Yardi)</label>
    <type>TextArea</type>
</CustomField>