Custom--app/main/default/objects/Tenant_Card__c/fields/Move_Out_within_14_Days__c.field-meta.xml
<CustomField>
    <fullName>Move_Out_within_14_Days__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field gets checked by a time-based workflow.  There's a Trigger that fires based off of this field being checked.</description>
    <label>Move-Out within 14 Days</label>
    <type>Checkbox</type>
</CustomField>