Custom--app/main/default/objects/Tenant_Card__c/fields/MTM_Fee_Amount_Yardi__c.field-meta.xml
<CustomField>
    <fullName>MTM_Fee_Amount_Yardi__c</fullName>
    <description>Fee applied when Resident has gone Month to Month in Yardi</description>
    <inlineHelpText>Fee applied when Resident has gone Month to Month in Yardi</inlineHelpText>
    <label>MTM Fee Amount (in Yardi)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>