Custom--app/main/default/objects/Tenant_Card__c/fields/Notice_Date__c.field-meta.xml
<CustomField>
    <fullName>Notice_Date__c</fullName>
    <label>Notice Date (from Yardi)</label>
    <type>Date</type>
</CustomField>