Custom--app/main/default/objects/Tenant_Card__c/fields/NSF__c.field-meta.xml
<CustomField>
    <fullName>NSF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NSF</label>
    <type>Checkbox</type>
</CustomField>