Custom--app/main/default/objects/Tenant_Card__c/fields/Payable_Method__c.field-meta.xml
<CustomField>
    <fullName>Payable_Method__c</fullName>
    <label>Payable Method</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>certified funds</fullName>
            </value>
            <value>
                <fullName>check</fullName>
            </value>
            <value>
                <fullName>cashiers check</fullName>
            </value>
            <value>
                <fullName>money order</fullName>
            </value>
            <value>
                <fullName>online</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>