Custom--app/main/default/objects/Tenant_Card__c/fields/Phone_primary__c.field-meta.xml
<CustomField>
    <fullName>Phone_primary__c</fullName>
    <description>Resident's primary phone number</description>
    <inlineHelpText>Resident's primary phone number</inlineHelpText>
    <label>Phone (primary)</label>
    <type>Phone</type>
</CustomField>