Custom--app/main/default/objects/Tenant_Card__c/fields/Portfolio_ID__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_ID__c</fullName>
    <formula>Portfolio__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Portfolio ID</label>
    <type>Text</type>
</CustomField>