Custom--app/main/default/objects/Tenant_Card__c/fields/Renewal_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Close_Date__c</fullName>
    <label>Renewal Close Date</label>
    <type>Date</type>
</CustomField>