Custom--app/main/default/objects/Tenant_Card__c/fields/Renewal_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Renewal Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RenewalCoordinator</relationshipName>
    <type>Lookup</type>
</CustomField>