Custom--app/main/default/objects/Tenant_Card__c/fields/Renewal_Status__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Status__c</fullName>
    <label>Renewal Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>