Custom--app/main/default/objects/Tenant_Card__c/fields/Residence__c.field-meta.xml
<CustomField>
    <fullName>Residence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Residence</label>
    <referenceTo>Residence__c</referenceTo>
    <relationshipName>Leases1</relationshipName>
    <type>Lookup</type>
</CustomField>