Custom--app/main/default/objects/Tenant_Card__c/fields/Residence_sf_ID__c.field-meta.xml
<CustomField>
    <fullName>Residence_sf_ID__c</fullName>
    <formula>Portfolio__r.Residence__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Residence sf ID</label>
    <type>Text</type>
</CustomField>