Custom--app/main/default/objects/Tenant_Card__c/fields/Resident_Provided_Email__c.field-meta.xml
<CustomField>
    <fullName>Resident_Provided_Email__c</fullName>
    <formula>IF(NOT(ISBLANK( Email__c )), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resident Provided Email</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>