Custom--app/main/default/objects/Tenant_Card__c/fields/Stabilized__c.field-meta.xml
<CustomField>
    <fullName>Stabilized__c</fullName>
    <label>Stabilized</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Stabilized Carryover</fullName>
            </value>
            <value>
                <fullName>Stabilized IH</fullName>
            </value>
            <value>
                <fullName>Non-Stabilized</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>