Custom--app/main/default/objects/Tenant_Card__c/fields/tCode_LastName__c.field-meta.xml
<CustomField>
    <fullName>tCode_LastName__c</fullName>
    <label>Last Name/T-Code</label>
    <length>155</length>
    <type>Text</type>
</CustomField>