Custom--app/main/default/objects/Tenant_Card__c/fields/Temp_Rehab__c.field-meta.xml
<CustomField>
    <fullName>Temp_Rehab__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Temp Rehab</label>
    <referenceTo>Rehab__c</referenceTo>
    <relationshipLabel>Leases</relationshipLabel>
    <relationshipName>Leases</relationshipName>
    <type>Lookup</type>
</CustomField>