Custom--app/main/default/objects/Tenant_Card__c/fields/Tenant_Current_Rent__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Current_Rent__c</fullName>
    <description>Most current rent paid by the Resident (as of last month)</description>
    <inlineHelpText>Most current rent paid by the Resident (as of last month)</inlineHelpText>
    <label>Tenant Current Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>