Custom--app/main/default/objects/Tenant_Card__c/fields/Tenant_Status_As_of_Import_Date__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Status_As_of_Import_Date__c</fullName>
    <label>Tenant Status (As of Import Date)</label>
    <length>155</length>
    <type>Text</type>
</CustomField>