Custom--app/main/default/objects/Tenant_Card__c/fields/This_was_the_Yardi_code_associated_with__c.field-meta.xml
<CustomField>
    <fullName>This_was_the_Yardi_code_associated_with__c</fullName>
    <inlineHelpText>This was the Yardi code associated with this asset prior to securitization.</inlineHelpText>
    <label>Yardi Code - Historical</label>
    <length>10</length>
    <type>Text</type>
</CustomField>