Custom--app/main/default/objects/Tenant_Card__c/fields/TIP_Formula__c.field-meta.xml
<CustomField>
    <fullName>TIP_Formula__c</fullName>
    <formula>IF(  Lease_From_Date__c  &lt;=  Portfolio__r.Acquisition_Date__c , 'Acquired Lease', 
IF(  Lease_End_Date__c  >  Portfolio__r.Post_Acq_Rekey_Date__c , 'IH Lease', 
'TIP Lease'))</formula>
    <label>TIP Formula</label>
    <type>Text</type>
</CustomField>