Custom--app/main/default/objects/Tenant_Card__c/fields/Two_Year_Term__c.field-meta.xml
<CustomField>
    <fullName>Two_Year_Term__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Two Year Term</label>
    <type>Checkbox</type>
</CustomField>