Custom--app/main/default/objects/Tenant_Card__c/fields/Yardi_Active_Lease__c.field-meta.xml
<CustomField>
    <fullName>Yardi_Active_Lease__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Yardi Active Lease</label>
    <type>Checkbox</type>
</CustomField>