Custom--app/main/default/objects/Tenant_Card__c/fields/Yardi_Code_formula__c.field-meta.xml
<CustomField>
    <fullName>Yardi_Code_formula__c</fullName>
    <formula>Portfolio__r.Yardi_Property_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Yardi Code (formula)</label>
    <type>Text</type>
</CustomField>