Custom--app/main/default/objects/Tenant_Card__c/fields/Yardi_Property_Code__c.field-meta.xml
<CustomField>
    <fullName>Yardi_Property_Code__c</fullName>
    <label>Yardi Property Code</label>
    <length>155</length>
    <type>Text</type>
</CustomField>