Custom--app/main/default/objects/Tenant_Card__c/fields/YRR_Current_Tenant_Status__c.field-meta.xml
<CustomField>
    <fullName>YRR_Current_Tenant_Status__c</fullName>
    <formula>Residence__r.YRR_Current_Tenant_Status__c</formula>
    <label>YRR Current Tenant Status</label>
    <type>Text</type>
</CustomField>