Custom--app/main/default/objects/Tenant_Card__c/listViews/Evictions.listView-meta.xml
<ListView>
    <fullName>Evictions</fullName>
    <columns>NAME</columns>
    <columns>Yardi_Property_Code__c</columns>
    <columns>Region__c</columns>
    <columns>Lease_From_Date__c</columns>
    <columns>Lease_End_Date__c</columns>
    <columns>Move_Out_Date__c</columns>
    <columns>Lease_Rent__c</columns>
    <columns>Month_to_Month__c</columns>
    <columns>Lease_Status__c</columns>
    <columns>tCode_LastName__c</columns>
    <columns>Tenant_Status_As_of_Import_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Tenant_Status_As_of_Import_Date__c</field>
        <operation>equals</operation>
        <value>Eviction</value>
    </filters>
    <label>Evictions</label>
</ListView>