Custom--app/main/default/objects/Tenant_Card__c/listViews/Expired_Leases.listView-meta.xml
<ListView>
    <fullName>Expired_Leases</fullName>
    <columns>NAME</columns>
    <columns>Region__c</columns>
    <columns>Lease_From_Date__c</columns>
    <columns>Lease_End_Date__c</columns>
    <columns>Lease_Rent__c</columns>
    <columns>Month_to_Month__c</columns>
    <columns>Lease_Status__c</columns>
    <columns>tCode_LastName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Lease_End_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Month_to_Month__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Expired Leases</label>
</ListView>