Custom--app/main/default/objects/Tenant_Card__c/listViews/New_Leases.listView-meta.xml
<ListView>
    <fullName>New_Leases</fullName>
    <columns>NAME</columns>
    <columns>Region__c</columns>
    <columns>Portfolio__c</columns>
    <columns>Residence__c</columns>
    <columns>Yardi_Property_Code__c</columns>
    <columns>Lease_From_Date__c</columns>
    <columns>Lease_End_Date__c</columns>
    <columns>Lease_Term__c</columns>
    <columns>Month_to_Month__c</columns>
    <columns>Lease_Rent__c</columns>
    <columns>Lease_Status__c</columns>
    <columns>tCode_LastName__c</columns>
    <columns>Tenant_Status_As_of_Import_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>New Leases</label>
    <sharedTo>
        <group>System_Admins</group>
    </sharedTo>
</ListView>